# gimbal_board

./: .gitignore  CMakeLists.txt  README.md  memo.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_main.c  app_main.cpp  idf_component.yml
main/AS5048/example/: main.cpp
main/CAN/: 73CanConfig.hpp  CanComm.cpp  CanComm.hpp
main/CAN/example/: main.cpp  mainexample.cpp
main/GPTimer/: gptimer.h
main/Quaternion/: Q.h  SimpleQuat.h  SimpleQuat.hpp
main/Quaternion/analyze/: CMakeLists.txt  pybind_simplequat.cpp  simplequat_test.py
main/SPICREATE/: SPICREATE.cpp  SPICREATE.h  SPICREATE.hpp
main/SdmmcLogger/: SdmmcLogger.h  SdmmcLogger.hpp
main/SdmmcLogger/example/: main.cpp
main/foc/example/: main.cpp  velocity-openloop.cpp
main/icm42688/: ICM42688.h  ICM42688.hpp
main/icm42688/example/: main.cpp
